# DepsGuard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  evals.yml
depsguard/: __init__.py  server.py
docs/: demo.md
evals/: __init__.py  run_evals.py
examples/: __init__.py  langgraph_dependency_gate.py
tests/: test_langgraph_dependency_gate.py  test_server.py
